# pico-clock

./: .gitignore  CMakeLists.txt  Clock.cpp  Clock.h  DS3231.cpp  DS3231.h  LCD.cpp  LCD.h  README.md  SystemTiming.cpp  SystemTiming.h  Terminal.cpp  Terminal.h  main.cpp  pico-clock.c
docs/: lcdLayout.xlsx
